2003-05-25 Seiichi SATO <ssato@sh.rim.or.jp>

	* Added a search path to kiklib/src/.libs/libkik.* for -lkik to
	  mkf/lib/Makefile.in.
	  (Thanks to Kubota Tomohiro san and Minami Hirokazu san)

2003-05-25 Araki Ken <arakiken@users.sf.net>

	* The free'd 'root' could be accessed at close_screen_intern() in x_term_manager.c. Fixed.
	  (Thanks to Minami Hirokazu san)
	* As soon as the child 'make' process exits, the parent one also exits.
	  (Thanks to Minami Hirokazu san)
	* Added 'is_auto_encoding' to doc/en/PROTOCOL.
	  (Thanks to Kubota Tomohiro san)

2003-05-25 Araki Ken <arakiken@users.sf.net>

	* Cursor position could be illegal after a window resized. Fixed.

2003-05-24 Tomohiro KUBOTA <kubota@debian.org>

	* Removed description on -%/--class command option from manpage.
	* Removed non-ASCII (well, seems to be intended to be EUC-JP)
	  characters from this ChangeLog.

2003-05-24 Araki Ken <arakiken@users.sf.net>

	* Fixed set_xdnd_config() in x_screen.c

2003-05-22  MINAMI Hirokazu  <minami@mistfall.net>

	* Removed unused fuctions from x_window.c.

2003-05-22 Araki Ken <arakiken@users.sf.net>

	* Compilation failed in ml_logical_visual.c. Fixed.
	  (Thanks to Kubota Tomohiro san)

2003-05-20  MINAMI Hirokazu  <minami@mistfall.net>

	* make XDND handler call start/stop_vt100_cmd()
	before/after processing a config sequence.

2003-05-20 Araki Ken <arakiken@users.sf.net>

	* Fixed some problems in resizing window.
	  (Thanks to >>796)

2003-05-19  MINAMI Hirokazu  <minami@mistfall.net>

	* support DND from nautilus's background setting dialog. 
	* support application/x-color as DND type and
	refrect the color to the window's background.
	* added lots of dubug messages.

	* In DND session, "text/x-mlterm.config" is now preffered
	to other mime types. 

2003-05-18 Araki Ken <arakiken@users.sf.net>

	* Renamed x_font_set_x{ft_}font() to x_font_load_x{ft_}font().

2003-05-18  MINAMI Hirokazu  <minami@mistfall.net>

	* Really fixed the XDND bug 